fix:  修改server.js 以及新增docker-compose 的檔案

--- a/docker-compose.old.yml
+++ b/docker-compose.old.yml
@@ -7,3 +7,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:8000"
+  visualizer:
+    image: dockersamples/visualizer:stable
+    ports:
+      - "8080:8080"
